fix:详情盘口折叠

--- a/src/base-h5/components/details/styles/details-theme/temp.scss
+++ b/src/base-h5/components/details/styles/details-theme/temp.scss
@@ -47,7 +47,7 @@
     }
     .corner-ball-weg {
       &:after {
-        background: var(--q-gb-bd-c-13);
+        background: var(--q-gb-bg-c-13);
       }
     }
     .fat-sty {
