--- a/project/app-h5/src/pages/details/styles/details.scss
+++ b/project/app-h5/src/pages/details/styles/details.scss
@@ -9,7 +9,7 @@
     :deep(.transition-zhiding) {
       .play-name-outer-wrapper {
         .play-name {
-          background-image: none !important;
+          // background-image: linear-gradient(180deg, #ffffff 22.04%, #f7f8ff 100%);
           &::after {
             border: none !important;
           }
