feat: 继续开发赛果相关页面，研究借鉴了其他组件，完善了体育类型滚动选择menu的开发

--- a/project/app-h5/src/pages/match-results/index.scss
+++ b/project/app-h5/src/pages/match-results/index.scss
@@ -1,17 +1,20 @@
 .switch-box {
     display: flex;
     justify-content: space-between;
+
     // border-bottom: .01rem solid var(--q-gb-bd-c-7);
     .switch-item {
-        flex:1;
+        flex: 1;
         display: flex;
         justify-content: center;
+
         span {
             padding: .06rem 0;
             font-size: .16rem;
             margin: 0 .16rem;
         }
     }
+
     .switch-item-active {
         span {
             border-bottom: .02rem solid var(--q-gb-t-c-1);
@@ -19,18 +22,19 @@
     }
 }
 
-.ht-slide-box {
+.slide-box {
     display: flex;
     justify-content: space-between;
     padding: 0 .14rem;
     width: 100%;
     overflow-x: scroll;
-    
+
     .slide-item {
-        flex:0 0 .32rem;
+        flex: 0 0 .32rem;
         margin-right: .1rem;
         display: flex;
         justify-content: center;
+
         span {
             display: flex;
             justify-content: center;
@@ -43,10 +47,48 @@
             font-weight: 300;
         }
     }
+
     .slide-item-active {
         span {
             color: var(--q-gb-t-c-1);
             border-bottom: .02rem solid var(--q-gb-t-c-1);
+        }
+    }
+}
+
+
+
+.match-options {
+    display: flex;
+    padding: .04rem 0;
+    width: 100%;
+    overflow-x: scroll;
+    flex-wrap: nowrap;
+    scrollbar-width: none; // 去除滚动条火狐浏览器兼容性问题
+
+    .option {
+        flex: 0 0 .68rem;
+        height: .5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+
+        span {
+            --per: -0.32rem;
+            display: block;
+            width: auto;
+            height: 0.22rem;
+            width: 0.22rem;
+            background-position: 0 0;
+            background-size: 0.22rem 18.88rem;
+            transform: scale(1.1);
+            margin-bottom: .04rem;
+        }
+
+        .title {
+            font-size: .10rem;
+            color: var(--q-gb-bg-c-4);
         }
     }
 }
