--- a/src/base-h5/components/match-list/styles/match-container-2.scss
+++ b/src/base-h5/components/match-list/styles/match-container-2.scss
@@ -78,6 +78,8 @@
     display: block;
     position: relative;
     transition: max-height 0.3s;
+    padding-left: 10px;
+    background: #fff;
 
     .match-odds-container-border-radius {
       overflow: hidden;
@@ -88,6 +90,9 @@
 
     .eports_scoring_tip {
       color: var(--q-gb-t-c-13);
+    }
+    &.hairline-border{
+      border-radius: 0;
     }
   }
 
@@ -610,7 +615,6 @@
 
       .score-wrapper {
         margin-top: 0.04rem;
-        padding-left: 0.05rem;
         position: absolute;
         bottom: 0;
 
