--- a/project/app-h5/src/css/common/app.scss
+++ b/project/app-h5/src/css/common/app.scss
@@ -692,6 +692,10 @@ i {
   margin: 0 4px;
   margin: 0 0.04rem;
 }
+.mx-5 {
+  margin: 0 5px;
+  margin: 0 0.05rem;
+}
 .mx-8 {
   margin: 0 8px;
   margin: 0 0.08rem;
