列表样式修改-01

--- a/src/base-h5/components/match-list/styles/match-container-2.scss
+++ b/src/base-h5/components/match-list/styles/match-container-2.scss
@@ -356,6 +356,14 @@
           left: 0;
         }
       }
+      .league-t-tubiao {
+        height: 0.15rem;
+        width: 0.02rem;
+        background-color: #303442;
+        border-radius: 10px;
+
+
+      }
       .league-collapse-dir {
         width: 0.12rem;
         height: 0.06rem;
