首页样式修改-02

--- a/src/base-h5/components/match-list/styles/index.variables.scss
+++ b/src/base-h5/components/match-list/styles/index.variables.scss
@@ -39,6 +39,8 @@
         }
         .match-inner-container {
           background: var(--q-gb-bg-c-17);
+          width: 98%;
+          
           .odd-item-wrap-borer-top {
             background-color: var(--q-color-border-color-11);
           }
