fix:出现了全局的text样式，解决受到影响的元素

--- a/project/app-h5/src/pages/match-results/index.scss
+++ b/project/app-h5/src/pages/match-results/index.scss
@@ -22,6 +22,13 @@
     }
 }
 
+.right-icon {
+    width: .18rem;
+    height: .18rem;
+    background-color: var(--q-gb-t-c-1);
+    margin-right: .14rem;
+}
+
 .slide-box {
     display: flex;
     // justify-content: space-between;
