--- a/src/base-h5/components/match-list/styles/match-container-2.scss
+++ b/src/base-h5/components/match-list/styles/match-container-2.scss
@@ -83,6 +83,7 @@
 
     .match-odds-container-border-radius {
       overflow: hidden;
+      border-top: 1px solid #e9e9e9;
     }
     &.border-top{
       border-top: 1px solid #e9e9e9;
@@ -413,7 +414,7 @@
     flex-direction: row-reverse;
     background: #fff;
     border-top: 1px solid #e9e9e9;
-    border-bottom: 1px solid #e9e9e9;
+    // border-bottom: 1px solid #e9e9e9;
 
     .odd-title-i-w {
       width: 50%;
@@ -428,7 +429,11 @@
         }
       }
     }
-
+      
+    .odd-title-wrape-tab {
+      border-top: 1px solid #000;
+      width: 96%;
+    }
     .row {
       height: 100%;
     }
