style:详情盘口模板

--- a/src/base-h5/components/details/styles/tournament-play-new.scss
+++ b/src/base-h5/components/details/styles/tournament-play-new.scss
@@ -671,7 +671,7 @@
       .rad-style {
         border-radius: 0.08rem;
         overflow: hidden;
-        background-color: var(--q-gb-bg-c-15);
+        background-color: #F8F9FA;
         ::after {
           border: 0;
         }
