--- a/project/app-h5/src/pages/match-results/index.scss
+++ b/project/app-h5/src/pages/match-results/index.scss
@@ -29,6 +29,15 @@
     margin-right: .14rem;
 }
 
+.select-mask {
+    position: fixed;
+    width: 100vw;
+    background: rgba(0, 0, 0, 0.4);
+    top: 0;
+    z-index: 2000;
+    left: 0
+}
+
 .slide-box {
     display: flex;
     // justify-content: space-between;
