--- a/src/base-h5/components/details/styles/details-theme/temp.scss
+++ b/src/base-h5/components/details/styles/details-theme/temp.scss
@@ -87,7 +87,7 @@
       color:var(--q-gb-t-c-18);
     }
     .details_color {
-      background:var(--q-color-page-bg-color-2);
+      background:var(--q-gb-bg-c-15);
     }
     .win .odds-new2 {
       color: var(--q-color-com-fs-color-44) !important;
