--- a/project/app-h5/src/pages/match-list/index.scss
+++ b/project/app-h5/src/pages/match-list/index.scss
@@ -44,14 +44,14 @@
   }
 
   &.zaopan {
-    padding-top:1.3rem;
+    // padding-top:1.3rem;
   }
   // &.esport {
   //   padding-top: 1.4rem;
   // }
 
   &.guanjun {
-    padding-top: 1.1rem;
+    // padding-top: 1.1rem;
   }
 
   &.level_four_menu {
