fix:vr详情模块报错

--- a/src/base-h5/components/details/styles/details-theme/virtual_sports_details.scss
+++ b/src/base-h5/components/details/styles/details-theme/virtual_sports_details.scss
@@ -12,7 +12,7 @@
     }
   }
   .detail-header-bg {
-     background-color:var(--q-color-page-bg-color-2);
+     background-color: url($SCSSPROJECTPATH + '/image/png/virtual_football.png') //todo 后续上传资源
     &:after {
       background-color:var(--q-color-com-bg-color-4);
     }
