--- a/project/app-h5/src/pages/virtual/styles/virtual-sports-stage.scss
+++ b/project/app-h5/src/pages/virtual/styles/virtual-sports-stage.scss
@@ -26,7 +26,7 @@
   height: 2.02rem;
   margin: auto;
   overflow: hidden;
-  background-image: var(--q-color-com-img-bg-96);
+  background-image: url($SCSSPROJECTPATH+"/image/png/virtual_football.png"); //todo 后续上传到服务器
   background-size: 100% 100%;
   position: relative;
 
