--- a/src/base-h5/css/pages/virtual-sports.scss
+++ b/src/base-h5/css/pages/virtual-sports.scss
@@ -7,7 +7,7 @@
   .virtual-head {
     background-color: var(--q-virtual-bg-c-1);
     .bg1001 {
-      background-image:url($SCSSPROJECTPATH + '/image/png/bg1001-02.png')  center no-repeat;
+      background-image:url($SCSSPROJECTPATH + '/image/png/bg1001-02.png');
     }
     .bg1011 {
       background-image:  var(--q-color-img-bg-48);
