--- a/project/app-h5/src/css/common/common.scss
+++ b/project/app-h5/src/css/common/common.scss
@@ -12,17 +12,14 @@
     }
   }
   .right-border{
-    height: 20px;
-    line-height: 20px;
     position: relative;
     overflow: hidden;
-    padding-left: 8px;
     &::before{
       content: "";
-      height: 100%;
+      height: 20px;
       width: 10px;
       border-radius: 20px;
-      background: var(--q-virtual-bg-c-2);
+      background: var(--q-gb-bg-c-13);
       display: block;
       position: absolute;
       left: -7px;
