--- a/src/base-h5/components/match-list/styles/match-container-champion.scss
+++ b/src/base-h5/components/match-list/styles/match-container-champion.scss
@@ -11,10 +11,21 @@
     height: 0.4rem;
     margin: 0 0.07rem;
     margin-top: 0.07rem;
-    border-radius: 0.08rem;
+    border-radius: 4px;
+    border-bottom: 1px solid var(--q-gb-t-c-14);
 
     .league-wrapper {
       height: auto;
+
+      &:before {
+        width: 0.03rem;
+        height: 0.16rem;
+        transform: translateY(-1px);
+        content: ' ';
+        display: block;
+        border-radius: 0.015rem;
+        background: var(--q-gb-t-c-1);
+      }
 
       .favorite {
         width: 0.16rem;
@@ -131,9 +142,12 @@
     }
   }
   .limit-time {
-    width: 100%;
+    // width: 100%;
     height: 0.25rem;
     font-size: 0.11rem;
+    text-align: right;
+    margin-top: 0.02rem;
+    margin-right: 0.08rem;
 
     &.first-t {
       padding-top: 0;
@@ -142,7 +156,7 @@
     }
 
     .limit-t-i {
-      width: 3.45rem;
+      // width: 3.45rem;
       height: 0.2rem;
       line-height: normal;
       margin: 0 auto;
@@ -161,16 +175,18 @@
       padding-left: 0.11rem;
       // padding-top: 0.12rem;
       position: relative;
+      display: flex;
      
 
-      &:before {
-        width: 0.03rem;
-        height: 0.16rem;
-        transform: translateY(-1px);
-        content: ' ';
-        display: block;
-        border-radius: 0.015rem;
-      }
+      // &:before {
+      //   width: 0.03rem;
+      //   height: 0.16rem;
+      //   transform: translateY(-1px);
+      //   content: ' ';
+      //   display: block;
+      //   border-radius: 0.015rem;
+      //   background: var(--q-gb-t-c-1);
+      // }
 
       .hpn-wrap {
         width: 96%;
