style:vr详情历史战绩

--- a/src/base-h5/css/pages/virtual-sports.scss
+++ b/src/base-h5/css/pages/virtual-sports.scss
@@ -25,7 +25,7 @@
       background-image: var(--q-color-img-bg-52);
     }
     .back-wrap {
-      color:  var(--q-color-fs-color-54);
+      color:  var(--q-gb-t-c-14);
       .detail-back {
         background: url($SCSSPROJECTPATH + '/image/common/go_back.svg')  center no-repeat;
       }
