冠军列表页修改-02

--- a/src/base-h5/css/pages/match-container-champion.scss
+++ b/src/base-h5/css/pages/match-container-champion.scss
@@ -1,7 +1,7 @@
 [class*=theme0] {
   .champion-wrap {
     .league-container {
-      background:var(--q-gb-bg-c-15);
+      // background:var(--q-gb-bg-c-15);
       .league-wrapper {
         .league-title {
           color:  var(--q-color-fs-color-14);
@@ -18,7 +18,7 @@
       }
     }
     .hps-wrap {
-      background:var(--q-gb-bg-c-10);
+      // background:var(--q-gb-bg-c-10);
       .match-title {
         //background: var(--q-match-page-bg-color-10);
         &:before {
