--- a/src/base-h5/components/match-list/styles/match-container-champion.scss
+++ b/src/base-h5/components/match-list/styles/match-container-champion.scss
@@ -3,16 +3,19 @@
   //margin: 0 0 0 0.07rem;
   //border-radius: 0.08rem;
   //overflow: hidden;
-  width: 100%;
+  width: calc(100% - 0.2rem);
   height: auto;
   position: relative;
+  margin: 0 0.1rem;
+  background: var(--q-gb-t-c-6);
+  border-radius: 0.05rem;
 
   .league-container {
     height: 0.4rem;
-    margin: 0 0.07rem;
+    // margin: 0 0.07rem;
     margin-top: 0.07rem;
     border-radius: 4px;
-    border-bottom: 1px solid var(--q-gb-t-c-14);
+    border-bottom: 1px solid var(--q-gb-t-c-4);
 
     .league-wrapper {
       height: auto;
@@ -25,6 +28,7 @@
         display: block;
         border-radius: 0.015rem;
         background: var(--q-gb-t-c-1);
+        margin-right: 0.1rem;
       }
 
       .favorite {
@@ -167,8 +171,8 @@
 
   .hps-wrap {
     margin: 0 0.07rem;
-    margin-top: 0.05rem;
-    padding-top: 0.05rem;
+   // margin-top: 0.05rem;
+    //padding-top: 0.05rem;
 
     .match-title {
       height: 0.34rem;
@@ -176,6 +180,7 @@
       // padding-top: 0.12rem;
       position: relative;
       display: flex;
+      width: 50%;
      
 
       // &:before {
@@ -201,7 +206,7 @@
       flex-wrap: wrap;
       margin-top: 0.07rem;
       padding-left: 0.07rem;
-      padding-bottom: 0.08rem;
+     // padding-bottom: 0.08rem;
     }
 
     .ol-list-wrap2 {
