二级滚动样式微调

--- a/project/app-h5/src/css/common/common.scss
+++ b/project/app-h5/src/css/common/common.scss
@@ -1,9 +1,9 @@
 // 暂时自定义样式覆盖
 
 #app-h5 {
-  .sport-menu-item{
-    width: 0.68rem;
-  }
+  // .sport-menu-item{
+  //   width: 0.68rem;
+  // }
   // 赛事列表 页
   .match-list-page{
     background: #fff;
