46918 【SIT】【H5新版复刻】【H5】选中的菜单效果与设计的效果不一致

--- a/project/app-h5/src/css/common/app.scss
+++ b/project/app-h5/src/css/common/app.scss
@@ -90,7 +90,7 @@
 body {
   color: #414655;
   font-size: 0.12rem !important;
-  font-family: dinMedium, PingFangSC, Arial, Helvetica, sans-serif !important;
+  font-family:'PingFang SC', Arial, Helvetica, sans-serif !important;
 }
 /* 字体大小 */
 .yb_fontsize8 {
