--- a/project/app-h5/src/pages/match-list/index.scss
+++ b/project/app-h5/src/pages/match-list/index.scss
@@ -3,7 +3,7 @@
 .match-list-page {
   opacity: 1;
   width: 100%;
-  height: 450px;
+  height: 100%;
   overflow-y: hidden;
   position: relative;
   transition: transform 0.2s;
