--- a/src/base-h5/components/match-list/styles/match-container-champion.scss
+++ b/src/base-h5/components/match-list/styles/match-container-champion.scss
@@ -3,33 +3,19 @@
   //margin: 0 0 0 0.07rem;
   //border-radius: 0.08rem;
   //overflow: hidden;
-  width: calc(100% - 0.2rem);
+  width: 100%;
   height: auto;
   position: relative;
-  margin: 0 0.1rem;
-  background: var(--q-gb-t-c-6);
-  border-radius: 0.05rem;
+  border-radius: 4px;
 
   .league-container {
     height: 0.4rem;
-    // margin: 0 0.07rem;
+    margin: 0 0.07rem;
     margin-top: 0.07rem;
-    border-radius: 4px;
-    border-bottom: 1px solid var(--q-gb-t-c-4);
+    border-radius: 0.08rem;
 
     .league-wrapper {
       height: auto;
-
-      &:before {
-        width: 0.03rem;
-        height: 0.16rem;
-        transform: translateY(-1px);
-        content: ' ';
-        display: block;
-        border-radius: 0.015rem;
-        background: var(--q-gb-t-c-1);
-        margin-right: 0.1rem;
-      }
 
       .favorite {
         width: 0.16rem;
@@ -114,7 +100,13 @@
         }
       }
     }
+  .collect-tubiao{
+    height: 0.15rem;
+    width: 0.02rem;
+    background-color:var(--q-gb-t-c-1) ;
+    border-radius: 10px;
 
+  }
     .collapse-dire {
       margin: 0.05rem 0.11rem 0.07rem 0;
 
@@ -146,12 +138,9 @@
     }
   }
   .limit-time {
-    // width: 100%;
+    width: 100%;
     height: 0.25rem;
     font-size: 0.11rem;
-    text-align: right;
-    margin-top: 0.02rem;
-    margin-right: 0.08rem;
 
     &.first-t {
       padding-top: 0;
@@ -160,7 +149,7 @@
     }
 
     .limit-t-i {
-      // width: 3.45rem;
+      width: 3.45rem;
       height: 0.2rem;
       line-height: normal;
       margin: 0 auto;
@@ -171,27 +160,24 @@
 
   .hps-wrap {
     margin: 0 0.07rem;
-   // margin-top: 0.05rem;
-    //padding-top: 0.05rem;
+    //margin-top: 0.05rem;
+    padding-top: 0.05rem;
 
     .match-title {
       height: 0.34rem;
-      padding-left: 0.11rem;
+      // padding-left: 0.11rem;
       // padding-top: 0.12rem;
       position: relative;
-      display: flex;
-      width: 50%;
      
 
-      // &:before {
-      //   width: 0.03rem;
-      //   height: 0.16rem;
-      //   transform: translateY(-1px);
-      //   content: ' ';
-      //   display: block;
-      //   border-radius: 0.015rem;
-      //   background: var(--q-gb-t-c-1);
-      // }
+      &:before {
+        width: 0.03rem;
+        height: 0.16rem;
+        transform: translateY(-1px);
+        content: ' ';
+        display: block;
+        border-radius: 0.015rem;
+      }
 
       .hpn-wrap {
         width: 96%;
@@ -206,7 +192,7 @@
       flex-wrap: wrap;
       margin-top: 0.07rem;
       padding-left: 0.07rem;
-     // padding-bottom: 0.08rem;
+      padding-bottom: 0.08rem;
     }
 
     .ol-list-wrap2 {
