46911 【SIT】【H5新版复刻】【H5】列表页面，投注项的字体颜色和赔率的字体错误

--- a/src/base-h5/components/match-list/styles/odd-column-item.scss
+++ b/src/base-h5/components/match-list/styles/odd-column-item.scss
@@ -91,7 +91,9 @@
     }
   }
   .fontbold{
-    font-weight: bold;
+    font-weight: 600;
+    font-family: Akrobat;
+    font-size: 12px;
   }
 
   .odd-title {
@@ -104,6 +106,7 @@
     &.standard {
       margin-bottom: 0.03rem;
       font-size: 0.12rem;
+    
     }
 
     &.three {
