--- a/project/app-h5/src/css/common/common.scss
+++ b/project/app-h5/src/css/common/common.scss
@@ -19,7 +19,7 @@
       height: 20px;
       width: 10px;
       border-radius: 20px;
-      background: var(--q-gb-bg-c-13);
+      background: var(--q-gb-t-c-1);
       display: block;
       position: absolute;
       left: -7px;
