--- a/src/base-h5/components/match-list/styles/index.variables.scss
+++ b/src/base-h5/components/match-list/styles/index.variables.scss
@@ -1,10 +1,10 @@
 [class*=theme0] {
   .match-list-container, .loading-more-container {
-    background: var(--q-gb-bg-c-17);
+    background: var(--q-gb-bg-c-10);
     .scroll-wrapper {
-      background: var(--q-gb-bg-c-17);
+      background: var(--q-gb-bg-c-10);
       .s-w-item {
-        background: var(--q-gb-bg-c-17);
+        background: var(--q-gb-bg-c-10);
       }
       .match-container {
         // .odd-list.match-indent.simple {
@@ -25,7 +25,7 @@
         }
         .sport-title {
           .score-inner-span{
-            color: var(--q-match-fs-color-153);
+            color: var(--q-gb-t-c-3);
           }
           .ball_img {
             background-color:var(--q-color-page-bg-color-2);
@@ -131,7 +131,7 @@
           }
         }
         .league {
-          background:var(--q-gb-bg-lg-8);
+          background:var(--q-match-page-bg-color-10);
           border-color: var(--q-gb-bd-c-3);
           color: var(--q-match-fs-color-1);
 
@@ -148,7 +148,7 @@
           }
         }
         .date-container {
-           background:var(--q-gb-bg-c-15);
+           background:var(--q-match-page-bg-color-10) ;
           &.simple {
             .title-space-1 {
               color: var(--q-match-fs-color-137);
@@ -236,7 +236,7 @@
           }
         }
         .odd-list {
-           background:var(--q-gb-bg-c-15);;
+           background:var(--q-match-page-bg-color-10);
           &.result {
             border-color: var(--q-gb-bd-c-3);
           }
@@ -367,7 +367,7 @@
             }
             /* ************** 标准版投注项选择样式 ************** -S */
             .odd-column-item2 {
-              background: var(--q-match-page-bg-color-10) !important;
+              background: var(--q-gb-bg-c-15) !important;
               &:after {
                 background-color: transparent;
               }
