--- a/src/base-h5/components/match-list/styles/odd-list-wrap.scss
+++ b/src/base-h5/components/match-list/styles/odd-list-wrap.scss
@@ -324,10 +324,14 @@
     bottom: 0;
 
     .block {
-      width: 0.08rem;
+      width:4px;
       height: 0.02rem;
-      background: var(--q-color-com-bg-color-44);
+      background: #E4E6ED !important;
       border-radius: 0.01rem;
+      &.selected {
+        width: 8px;
+        background: #C9CDDB !important;
+      }
 
       &:last-child {
         margin-left: 0.04rem;
