46928 【SIT】【H5新版复刻】【H5】篮球赛事详情页投注玩法较多时,无法右滑看到更多投注内容

--- a/src/base-h5/components/details/styles/details-theme/temp.scss
+++ b/src/base-h5/components/details/styles/details-theme/temp.scss
@@ -725,7 +725,7 @@
       color:var(--q-gb-t-c-13) !important;
     }
     [class*="slide_icon_"] {
-      background: var(--q-color-img-bg-36) no-repeat  center / cover;
+      background: url($SCSSPROJECTPATH + '/image/common/slide_icon_y0.svg') no-repeat  center / cover;  //todo
     }
   }
   /*************** temp13结束 *************** -E*/
