2648 虚拟体育-赛事详情-历史战绩

--- a/src/base-h5/components/details/styles/details-theme/virtual_sports_tab.scss
+++ b/src/base-h5/components/details/styles/details-theme/virtual_sports_tab.scss
@@ -58,7 +58,7 @@
           }
         }
         .separate {
-          background:  var(--q-color-page-bg-color-31);
+          background-color: var(--q-gb-t-c-18);
         }
       }
     }
