--- a/src/base-pc/components/site-header/site-header.scss
+++ b/src/base-pc/components/site-header/site-header.scss
@@ -84,7 +84,7 @@
 }
 
 .c-site-header {
-    height: 96px;
+    // height: 96px;
     background: var(--q-gb-bg-c-11); // #fff
     color: var(--q-gb-t-c-8); // #666
 
