--- a/src/base-h5/components/match-container/template/app/components/score-list-5/index.scss
+++ b/src/base-h5/components/match-container/template/app/components/score-list-5/index.scss
@@ -1,4 +1,3 @@
-
 .score-section {
   font-size: 0.12rem;
   height: 0.14rem;
@@ -6,11 +5,12 @@
   right: 0;
   line-height: 1;
   display: flex;
-  justify-content: flex-end;
+  // justify-content: flex-end;
   z-index: 2;
   position: relative;
   padding: 0 0 0 0.08rem;
   align-items: center;
+  width: 100%;
 
   &.standard {
     justify-content: flex-start;
@@ -82,7 +82,7 @@
   .scroll-container-w {
     position: relative;
     flex-shrink: 0;
-
+    width: 100%;
     .scroll-cover-f {
       position: absolute;
       left: 0;
@@ -108,7 +108,8 @@
       }
     }
 
-    &:before, &:after {
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                &:before,
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                &:after {
       content: ' ';
       width: 0;
       height: 0;
@@ -158,7 +159,7 @@
     }
 
     &.is-basket-ball {
-      max-width: 1.8rem;
+      // max-width: 1.8rem;
     }
 
     &.is-table-tennis {
@@ -166,11 +167,12 @@
     }
 
     .score-se-inner2 {
-      width: auto;
+    // width: 339px;
       height: 100%;
       line-height: 1;
       display: flex;
       flex-shrink: 0;
+      justify-content: space-between;
 
       .basket-ball {
         color: var(--q-color-com-fs-color-29);
