feat: 修改vr体育相关样式

--- a/src/base-h5/css/pages/virtual-sports-match-item.scss
+++ b/src/base-h5/css/pages/virtual-sports-match-item.scss
@@ -19,7 +19,7 @@
       }
       .standard-odd-list {
         .odd-wrap-min {
-          background-color: var(--q-color-page-bg-color-9);
+          background-color: var(--q-gb-t-c-14);
         }
       }
       .match-play-count {
