欧洲版列表UI对齐

--- a/project/app-h5/src/pages/match-list/index.scss
+++ b/project/app-h5/src/pages/match-list/index.scss
@@ -11,6 +11,9 @@
   // padding-bottom: 2.2rem;
   /*border-top: 0.01rem solid transparent;*/
   background: var(--q-gb-bg-c-17);
+  .match-list-container{
+    height: calc(100% - 44px - 50px - 32px - 48px);
+  }
   .animation{
     animation: my-animation 0.3s ease-in
   }
