--- a/project/app-h5/src/pages/match-results/index.scss
+++ b/project/app-h5/src/pages/match-results/index.scss
@@ -71,3 +71,9 @@
         }
     }
 }
+.match-results-container-styles {
+    height: calc(100% - 1.25rem);
+    overflow-y: scroll;
+    padding: .05rem;
+    background: var(--q-gb-bg-c-10);
+}
