--- a/src/base-h5/components/details/styles/details-theme/temp.scss
+++ b/src/base-h5/components/details/styles/details-theme/temp.scss
@@ -313,7 +313,7 @@
       color:var(--q-gb-t-c-11);
     }
     .size-color-imp {
-      color:var(--q-gb-t-c-13) !important;
+      // color:var(--q-gb-t-c-13) !important;
     }
   }
 
