欧洲版 通用模板样式调整

--- a/project/ouzhou-pc/src/layouts/match-list.scss
+++ b/project/ouzhou-pc/src/layouts/match-list.scss
@@ -3,7 +3,19 @@ body {
   /* 列表 */
   .yb-match-list {
     .match-tpl-101 {
-      
+      .c-match-handicap-ouzhou {
+        height: 100%;
+      }
     }
+  }
+}
+.handicap-col-ouzhou {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 16px;
+  .bet-item-wrap-ouzhou {
+    cursor: pointer;
+    text-align: center;
   }
 }
