--- a/project/ouzhou-pc/src/layouts/match-list.scss
+++ b/project/ouzhou-pc/src/layouts/match-list.scss
@@ -19,3 +19,16 @@ body {
     text-align: center;
   }
 }
+.play-name-ouzhou {
+  display: flex;
+  height: 100%;
+  .play-name-title-box {
+    display: flex;
+    align-items: center;
+    .play-name-item {
+      flex: 1;
+      text-align: center;
+      cursor: pointer;
+    }
+  }
+}
