--- a/project/ouzhou-pc/src/css/app.scss
+++ b/project/ouzhou-pc/src/css/app.scss
@@ -9,7 +9,7 @@ $layout_min_width: 1440px; //内容最大宽度
 
 body,
 html {
-  max-width: $layout_max_width;
+  max-width:  inherit;
   min-width: $layout_min_width;
   margin: 0 auto;
 }
